--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,13 @@
 {
   "require": {
     "silex/silex": "~1.3"
+  },
+  "require-dev": {
+    "phpspec/phpspec": "~2.0"
+  },
+  "autoload": {
+    "psr-0": {
+      "": "src/"
+    }
   }
 }
