--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
-    "silex/silex": "~1.3"
+    "silex/silex": "~1.3",
+    "symfony/security": "~2.7"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.0"
