--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
 {
   "require": {
     "silex/silex": "~1.3",
-    "symfony/security": "~2.7"
+    "symfony/security": "~2.7",
+    "doctrine/dbal": "~2.2",
+    "robmorgan/phinx": "~0.3"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.0"
