--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "silex/silex": "~1.3",
     "symfony/security": "~2.7",
     "doctrine/dbal": "~2.2",
-    "robmorgan/phinx": "~0.3"
+    "robmorgan/phinx": "~0.3",
+    "twig/twig": "~1.18"
   },
   "require-dev": {
     "phpspec/phpspec": "~2.0"
