--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
     "twig/twig": "~1.18"
   },
   "require-dev": {
-    "phpspec/phpspec": "~2.0"
+    "phpspec/phpspec": "~2.0",
+    "behat/behat": "*",
+    "behat/mink-extension": "*",
+    "behat/mink-goutte-driver": "*",
+    "behat/mink-zombie-driver": "*"
   },
   "autoload": {
     "psr-0": {
