--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   "require-dev": {
     "phpspec/phpspec": "~2.0",
     "symfony/browser-kit": "~2.7",
-    "symfony/css-selector": "~2.7"
+    "symfony/css-selector": "~2.7",
+    "phpunit/phpunit": "*"
   },
   "autoload": {
     "psr-0": {
