--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,8 @@
 machine:
   php:
     version: 5.6.5
+  environment:
+    DATABASE_URL: postgres://ubuntu:@127.0.0.1:5432/circle_test
 dependencies:
   post:
     - ./vendor/bin/phinx migrate -e circleci
